Implemented a Window, a Logger and Asserts

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "LearnOpenGL/ASSIMP"]
 	path = LearnOpenGL/ASSIMP
 	url = https://github.com/assimp/assimp.git
+[submodule "LearnOpenGL/SPDLOG"]
+	path = LearnOpenGL/SPDLOG
+	url = https://github.com/gabime/spdlog.git
