--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ GLAD.vcxproj.user
 #Visual Studio LearnOpenGL and STB_IMAGE projects and solution.
 LearnOpenGL.sln
 LearnOpenGL.vcxproj
-#LearnOpenGL.vcxproj.filters
+LearnOpenGL.vcxproj.filters
 LearnOpenGL.vcxproj.user
 STB_IMAGE.vcxproj
